--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Coursera Test</title>
 </head>
 <body>
-    <h1>MY COURSERA COURSE</h1>
+    <h1> MY COURSERA COURSE! is a great day </h1>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, culpa. Culpa hic suscipit esse quae natus aliquid ducimus est sint ad! Perspiciatis iure corporis possimus debitis magni voluptate itaque dolores!
 </body>
 </html>
